@@ -11,6 +11,7 @@ Enhancements:
 Fixes:
 
 * Fix activity date viewed as one day before the event happened
+* Fix settags api call with an empty tag
 
 RELEASED VERSIONS:
 
